# tf2-bot-kicker-gui

./: Cargo.toml  README.md
src/: gui.rs  main.rs  player_checker.rs  server.rs  settings.rs  state.rs  steamapi.rs  steamhistory.rs  version.rs
src/gui/: chat_window.rs  player_windows.rs  regex_windows.rs
src/io/: regexes.rs
src/server/: parties.rs  player.rs
