[package]
name = "tf2-bot-kicker-gui"
version = "0.1.0"
edition = "2021"

# Some size optimization stuff
[profile.release]
strip = true
panic = "abort"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.85"
reqwest = "0.11.0"
steam-api = "0.4.1"
crossbeam-channel = "0.5.14"

egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["image"]}
eframe = { version = "0.29.1", features = ["wgpu"] }

egui_dock = { version = "0.14.0", features = ["serde"] }
egui_graphs = "0.22.0"
winit = "0.30.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"

chrono = "0.4.39"
rfd = "0.15.2"
clipboard = "0.5.0"
regex = "1.11.1"

log = "*"
env_logger = "*"
image = { version = "0.25.5", features = ["jpeg", "png"] }
petgraph = "0.6.0"
include_dir = "0.7.4"
